make it modular

--- a/super.html
+++ b/super.html
@@ -140,7 +140,7 @@
       </div>
     </div>
 
-    <script src="js/script.js"></script>
+    <script type="module" src="js/app.js"></script>
     <script>
       // Initialize super admin dashboard
       document.addEventListener("DOMContentLoaded", function () {
