--- a/dashboard1.html
+++ b/dashboard1.html
@@ -59,7 +59,7 @@
       </div>
     </div>
 
-    <script src="js/script.js"></script>
+    <script type="module" src="js/app.js"></script>
     <script>
       // Initialize dashboard
       document.addEventListener("DOMContentLoaded", function () {
