--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
       </form>
       <div id="message"></div>
     </div>
-    <script src="js/script.js"></script>
+    <script type="module" src="js/app.js"></script>
   </body>
 </html>
